--- a/src/styles/header/_header.scss
+++ b/src/styles/header/_header.scss
@@ -1,5 +1,84 @@
+
+
 .header {
     background: $primary;
+
+    .header__logo-mobile {
+        color: $white;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: auto;
+        width: 90%;
+        padding-top: 10px;
+
+      
+
+        .header__logo-bars-mobile{
+            &::before {
+                content: "";
+                display: block;
+                width: 30px;
+                height: 30px;
+                background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21 13H3C2.73478 13 2.48043 12.8946 2.29289 12.7071C2.10536 12.5196 2 12.2652 2 12C2 11.7348 2.10536 11.4804 2.29289 11.2929C2.48043 11.1054 2.73478 11 3 11H21C21.2652 11 21.5196 11.1054 21.7071 11.2929C21.8946 11.4804 22 11.7348 22 12C22 12.2652 21.8946 12.5196 21.7071 12.7071C21.5196 12.8946 21.2652 13 21 13ZM21 18H3C2.73478 18 2.48043 17.8946 2.29289 17.7071C2.10536 17.5196 2 17.2652 2 17C2 16.7348 2.10536 16.4804 2.29289 16.2929C2.48043 16.1054 2.73478 16 3 16H21C21.2652 16 21.5196 16.1054 21.7071 16.2929C21.8946 16.4804 22 16.7348 22 17C22 17.2652 21.8946 17.5196 21.7071 17.7071C21.5196 17.8946 21.2652 18 21 18ZM21 8H3C2.73478 8 2.48043 7.89464 2.29289 7.70711C2.10536 7.51957 2 7.26522 2 7C2 6.73478 2.10536 6.48043 2.29289 6.29289C2.48043 6.10536 2.73478 6 3 6H21C21.2652 6 21.5196 6.10536 21.7071 6.29289C21.8946 6.48043 22 6.73478 22 7C22 7.26522 21.8946 7.51957 21.7071 7.70711C21.5196 7.89464 21.2652 8 21 8Z' fill='white'/%3E%3C/svg%3E%0A");
+            }
+        }
+    }   
+    .header__list-mobile{
+        
+        //ocupar a tela apenas do conteudo da lista de baixo para cima
+        //fundo cinza transparente
+        //deve surgir de cima para baixo
+        //efeito de transicao de entrada e saida
+
+        position: fixed;    
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 40vh;
+        background-color: $gray-2;
+        z-index: 100;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        transition: .5s ;
+
+
+
+        .header__list-mobile-close{
+            display: flex;
+            justify-content: flex-end;
+            width: 100%;
+            padding: 10px;
+            &::before {
+                content: "";
+                display: block;
+                width: 28px;
+                height: 31px;
+                background-image: url("data:image/svg+xml,%3Csvg width='28' height='31' viewBox='0 0 28 31' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 27.9C7.826 27.9 2.8 22.3355 2.8 15.5C2.8 8.6645 7.826 3.1 14 3.1C20.174 3.1 25.2 8.6645 25.2 15.5C25.2 22.3355 20.174 27.9 14 27.9ZM14 0C6.258 0 0 6.9285 0 15.5C0 24.0715 6.258 31 14 31C21.742 31 28 24.0715 28 15.5C28 6.9285 21.742 0 14 0ZM17.626 9.3L14 13.3145L10.374 9.3L8.4 11.4855L12.026 15.5L8.4 19.5145L10.374 21.7L14 17.6855L17.626 21.7L19.6 19.5145L15.974 15.5L19.6 11.4855L17.626 9.3Z' fill='white'/%3E%3C/svg%3E%0A");
+            }
+        }
+
+        .header__main-list-mobile{
+            display: flex;
+            flex-direction: column;
+            font-size: medium;
+            //espacamento entre linhas
+            line-height: 2;
+            align-items: center;
+            padding-left: 0;
+            .header__item-list-mobile {
+                list-style: none;
+                padding: 0 25px;
+                font-size: $size-6;
+                color: $light-white;
+            }
+        }
+    
+    
+    }
+
     .header__container-1 {
         display: flex;
         justify-content: space-between;
@@ -10,6 +89,8 @@
         @media (max-width: $mobile){
             width: $max-width-l;
         }
+
+        
     
         .header__logo {
             .title {
