--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,4 +4,9 @@
         './mixins/mixins',        
         './header/header',
         './about/about',
-        './mission/mission';
+        './mission/mission',
+        './reference/reference',
+        './slick-carousel/slick/slick',
+        './slick-carousel/slick/slick-theme';
+    
+        
