--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,10 @@
         './mission/mission',
         './reference/reference',
         './slick-carousel/slick/slick',
-        './slick-carousel/slick/slick-theme';
+        './slick-carousel/slick/slick-theme',
+        './company/company';
+    
+
+        
     
         
